<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite1">

    <FrameLayout
        android:id="@+id/background_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/bg2" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:background="@color/colorTransparent"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_gravity="left"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:background="@color/colorTransparent"
                android:src="@drawable/icon_left_arrow"
                android:tint="@color/colorBlue1" />
        </android.support.v7.widget.Toolbar>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="40dp"
            android:paddingRight="40dp">

            <TextView
                style="@style/font_bold1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/join_merchant_title1"
                android:textColor="@color/colorBlue1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="104dp"
                android:orientation="vertical">

                <TextView
                    style="@style/font_regular4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:text="@string/join_merchant_label_name"
                    android:textColor="@color/colorBlue2" />

                <EditText
                    android:id="@+id/name"
                    style="@style/font_regular3"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/text_box_background1"
                    android:hint="@string/join_merchant_label_name_placeholder"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textColor="@color/colorBlue1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="vertical">

                <TextView
                    style="@style/font_regular4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:text="@string/join_merchant_label_phone"
                    android:textColor="@color/colorBlue2" />

                <EditText
                    android:id="@+id/phone"
                    style="@style/font_regular3"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/text_box_background1"
                    android:hint="@string/join_merchant_label_phone_placeholder"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textColor="@color/colorBlue1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/generate_qr_button"
                    style="@style/font_regular3"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="@color/colorBlue1"
                    android:text="@string/join_merchant_button_text"
                    android:textColor="@color/colorWhite1" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/widget_loading" />
</RelativeLayout>