<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:background="@color/colorTransparent"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_gravity="left"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:background="@color/colorTransparent"
                android:src="@drawable/icon_left_arrow"
                android:tint="@color/colorBlue1" />

            <TextView
                style="@style/font_regular3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/my_qr_code_title1"
                android:textColor="@color/colorBlue1" />
        </android.support.v7.widget.Toolbar>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="40dp"
            android:paddingRight="40dp">

            <TextView
                style="@style/font_regular4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_qr_code_description1"
                android:textColor="@color/colorBlue2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/font_regular3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_qr_code_valid_time"
                    android:textColor="@color/colorRed1" />

                <TextView
                    android:id="@+id/valid_time"
                    style="@style/font_regular3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="22"
                    android:textColor="@color/colorRed1" />

                <TextView
                    style="@style/font_regular3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_qr_code_second"
                    android:textColor="@color/colorRed1" />

            </LinearLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/black"
                android:padding="1dp"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/qr_code"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:scaleType="fitXY"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/save_qr_button"
                    style="@style/font_regular3"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="@color/colorBlue1"
                    android:text="@string/my_qr_code_save_qr_button_text"
                    android:textColor="@color/colorWhite1" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/widget_loading" />
</RelativeLayout>